--- a/03-Grid-Layout/styles.css
+++ b/03-Grid-Layout/styles.css
@@ -18,11 +18,6 @@ ul {
     padding: 0;
 }
 
-p {
-    color: black;
-    font-size: medium;
-}
-
 .container {
     display: grid;
     grid-template-columns: 1fr 4fr;
@@ -48,14 +43,18 @@ p {
 }
 .header > ul > a{
     text-decoration: none;
+    font-size: 10px;
 }
 
 .header > ul > h1 {
     font-weight: bold;
+    font-size: 20px;
 }
 .header > ul{
     text-align: center;
+    font-size: x-small;
 }
+
 .sidebar{
     display: grid;
     grid-area: sidebar;
@@ -68,6 +67,7 @@ p {
     color: black;
     gap: 50px;
     margin: 10% 5%;
+    border-radius: 15px;
     align-content: center;
 }
 
@@ -80,6 +80,7 @@ p {
 }
 .nav > ul > a{
     text-decoration: none;
+    font-size: 15px;
 }
 
 .article{
